force-app/main/default/objects/Policy_Premium__c/Policy_Premium__c.object-meta.xml
<CustomObject>
    <label>Policy Premium</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Policy Premiums Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Premiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>