force-app/main/default/objects/Policy_Premium__c/fields/Age_Interval__c.field-meta.xml
<CustomField>
    <fullName>Age_Interval__c</fullName>
    <label>Age Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12-18</fullName>
            </value>
            <value>
                <fullName>18-25</fullName>
            </value>
            <value>
                <fullName>25-40</fullName>
            </value>
            <value>
                <fullName>40-60</fullName>
            </value>
            <value>
                <fullName>60 above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>