force-app/main/default/objects/Policy_Premium__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5,00,000</fullName>
            </value>
            <value>
                <fullName>10,00,000</fullName>
            </value>
            <value>
                <fullName>15,00,000</fullName>
            </value>
            <value>
                <fullName>20,00,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>