force-app/main/default/objects/Policy_Premium__c/fields/Policy_Plans__c.field-meta.xml
<CustomField>
    <fullName>Policy_Plans__c</fullName>
    <label>Policy Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Health Shield</fullName>
            </value>
            <value>
                <fullName>Family Wellness Plan</fullName>
            </value>
            <value>
                <fullName>Senior Care Gold</fullName>
            </value>
            <value>
                <fullName>Critical Illness Protect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>