force-app/main/default/objects/Policy_Premium__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <label>Premium Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>